src/objects/BRPurchaseOrder__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Custom_Field_01__c</fullName>
        <inlineHelpText>Custom field 01</inlineHelpText>
        <label>Custom Field 01</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Custom field 01</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amount__c</fullName>
        <inlineHelpText>Custom field 01</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>anonAmount__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Custom field 01</inlineHelpText>
        <label>Anon Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>anonName__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Custom field 01</inlineHelpText>
        <label>Anon Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>campaign__c</fullName>
        <description>This is a text field.</description>
        <label>Campaign</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fee__c</fullName>
        <inlineHelpText>Custom field 01</inlineHelpText>
        <label>Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>orderReceived__c</fullName>
        <description>This is a Date Time Field.</description>
        <label>Order Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>reconciled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Custom field 01</inlineHelpText>
        <label>Reconciled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subtotal__c</fullName>
        <inlineHelpText>Custom field 01</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>transactionID__c</fullName>
        <description>This is a text field.</description>
        <label>Transaction ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>BRPurchaseOrder</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BRPurchaseOrders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>